# MimicWX-Linux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  fix_and_start.sh
Docs/: Docker 容器内 fanotify 工作原理.md  优化 SQLite WAL 监听延迟.md  微信消息收发方向判断.md
adapter/: MimicWX.js
docker/: dbus-mimicwx.conf  extract_key.py  start.sh
scripts/: compare_lists.py  dump_atspi.py  monitor_formats.py  run_monitor.sh  test_action.py
src/: a11y.rs  api.rs  atspi.rs  chatwnd.rs  db.rs  humanizer.rs  input.rs  main.rs  wechat.rs
