[package]
name = "mimicwx"
version = "0.1.0"
edition = "2021"
description = "Zero-risk WeChat automation framework for Linux via AT-SPI2 + uinput"
license = "MIT"

[[bin]]
name = "mimicwx"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Humanization (randomized delays)
rand = "0.8"
rand_distr = "0.4"

# Utils
anyhow = "1"
futures = "0.3"

# ================================================================
# Linux-only dependencies (AT-SPI2, DBus, uinput)
# ================================================================
[target.'cfg(target_os = "linux")'.dependencies]
# D-Bus communication (pure Rust)
zbus = { version = "5", default-features = false, features = ["tokio"] }
# AT-SPI2 accessibility (built on zbus)
atspi = { version = "0.25", features = ["tokio"] }
atspi-common = "0.9"
atspi-connection = "0.9"
atspi-proxies = "0.9"
# Kernel-level input (uinput)
evdev = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
