[package]
name = "mimicwx"
version = "0.1.0"
edition = "2021"
description = "Zero-risk WeChat automation framework for Linux via AT-SPI2 + uinput"
license = "MIT"

[[bin]]
name = "mimicwx"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
anyhow = "1"
md5 = "0.7"
futures = "0.3"

# ================================================================
# Linux-only dependencies (AT-SPI2, DBus, uinput)
# ================================================================
[target.'cfg(target_os = "linux")'.dependencies]
# D-Bus communication (pure Rust)
zbus = { version = "5", default-features = false, features = ["tokio"] }
# AT-SPI2 accessibility (built on zbus)
atspi = { version = "0.25", features = ["tokio"] }
atspi-common = "0.9"
atspi-connection = "0.9"
atspi-proxies = "0.9"
# X11 input injection (XTEST extension)
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
# SQLCipher database access (bundled with vendored OpenSSL)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# inotify file system monitoring
inotify = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
